--- a/trunk/Changelog.txt
+++ b/trunk/Changelog.txt
@@ -1,6 +1,7 @@
-﻿Version 1.2.3.615 (2008-12-13):
+﻿Version 1.2.3.616 (2008-12-13):
 
 - Added Japanese translation (Tilt)
+- Added partial Korean translation (Wewe)
 - Fixed: a bug in language detection code
 - Fixed: Windows installer was not creating uninstaller entry in "Add / Remove Program" window
 
