- Updated Japanese translation (Tilt) - Updated Korean translation (Wewe)
git-svn-id: https://appetizer.googlecode.com/svn@260 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/version_1.2/Data/Locales/ja/appetizer.po
+++ b/branches/version_1.2/Data/Locales/ja/appetizer.po
@@ -73,7 +73,7 @@ msgid "About %s..."
 msgstr " %s について..."
 
 msgid "Add special item"
-msgstr "特殊アイテムに追加"
+msgstr "特殊アイテムを追加"
 
 msgid "Add to Multi Launch group"
 msgstr "複数起動グループに追加"
